margin spacing error fixed

--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@
     max-width: 600px;
     display: flex;
     justify-content: space-between;
+    margin: 0 auto;
 }
 
 .box{
